migration on Gradle: test Status 500